# youtube-kafka-project

./: README.md  pyproject.toml  requirements.txt
kafka_app/: config.py  kafka_producer.py  ksql_code.txt  main.py  youtube_api.py
