[tool.poetry]
name = "kafka-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
confluent_kafka = "*"
fastavro = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
